[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbitalpay-sdk"
version = "0.1.0"
description = "Python SDK for OrbitalPay agent micropayment service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orbitalpay_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
